fixed reading mode word spacing

--- a/app/javascript/stylesheets/pages/chapter.scss
+++ b/app/javascript/stylesheets/pages/chapter.scss
@@ -133,6 +133,15 @@
   }
 }
 
+.verses-reading {
+  .verse,
+  .line {
+    .arabic {
+      word-spacing: initial;
+    }
+  }
+}
+
 .line {
   direction: rtl;
 }
